--- a/svelte_js/package.json
+++ b/svelte_js/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "kind-of": "^6.0.3",
     "rollup": "^1.32.1",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
