[wip] manifest with rollup

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/vascoosx/svails#readme",
   "devDependencies": {
     "md5": "^2.2.1",
+    "md5-file": "^5.0.0",
     "onchange": "^7.0.2"
   }
 }
