--- a/svelte_js/package.json
+++ b/svelte_js/package.json
@@ -11,6 +11,7 @@
     "@rollup/plugin-node-resolve": "^6.0.0",
     "kind-of": "^6.0.3",
     "rollup": "^1.32.1",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
