--- a/svelte_js/package.json
+++ b/svelte_js/package.json
@@ -16,6 +16,7 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
+    "serialize-javascript": ">=3.1.0",
     "svelte": "^3.0.0"
   },
   "dependencies": {
